--- a/js arena/day 22 (Element,size and scrolling)/index.html
+++ b/js arena/day 22 (Element,size and scrolling)/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coordinates</title>
+    <title>Element, size and scrolling</title>
 </head>
 <body>
     
