--- a/bootstrap arena/form/index.html
+++ b/bootstrap arena/form/index.html
@@ -1,12 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>form</title>
+        <link rel="stylesheet" href="style.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous" defer></script>
+    </head>
+    <body style="background: #f1f2f6;  margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;">
+        <h1
+            style="font-size: 100px; font-weight: 800; color: #0366fe; text-align: center;">facebook</h1>
+
+        <div
+            class="container-sm   border border-secondary text-center py-2 px-5 rounded  border border-0  d-flex flex-column"
+            style="background-color:#ffffff ; box-shadow: 0 0 5px rgba(0, 0, 0, 0.17); width: 610px; ">
+            <div class=" mb-5 border-bottom border-secondary ">
+                <h1 style="font-weight: 700;">Create a new account</h1>
+                <h6> It's quick and easy.</h6>
+            </div>
+            <form class="text-start">
+
+                <div class="input-group  gap-2 ">
+                    <div class="form-floating mb-3 rounded">
+                        <input type="text" class="form-control"
+                            id="floatingInput" placeholder="Firstname">
+                        <label for="floatingInput">First name</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control"
+                            id="floatingInput" placeholder="Lastname">
+                        <label for="floatingInput">Last name</label>
+                    </div>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput"
+                        placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control"
+                        id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+
+            </form>
+            <span class="text-start">Date of birth <i
+                    class="bi bi-question-circle-fill"></i></span>
+            <div class="container text-">
+                <div class="row mt-3 mb-3">
+                    <div class="col">
+                        <div class="dropdown">
+                            <button
+                                class="btn btn-outline-secondary dropdown-toggle px-5"
+                                type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Date</button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">0</a></li>
+                                <li><a class="dropdown-item" href="#">1</a></li>
+                                <li><a class="dropdown-item" href="#">Something
+                                        else here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col ">
+                        <div class="dropdown">
+                            <button
+                                class="btn btn-outline-secondary dropdown-toggle px-5"
+                                type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Month</button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">0</a></li>
+                                <li><a class="dropdown-item" href="#">1</a></li>
+                                <li><a class="dropdown-item" href="#">Something
+                                        else here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="dropdown">
+                            <button
+                                class="btn btn-outline-secondary dropdown-toggle px-5"
+                                type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Year</button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">0</a></li>
+                                <li><a class="dropdown-item" href="#">1</a></li>
+                                <li><a class="dropdown-item" href="#">Something
+                                        else here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <span class="text-start">Gender <i
+                    class="bi bi-question-circle-fill"></i></span>
+            <div class="input-group mt-3 mb-3 gap-4 ">
+                <div
+                    class="form-check border aborder-secondary py-2 px-5 rounded ">
+                    <input class="form-check-input " type="radio"
+                        name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-check-label "
+                        for="flexRadioDefault1">
+                        Male
+                    </label>
+                </div>
+                <div
+                    class="form-check border aborder-secondary py-2 px-5 rounded">
+                    <input class="form-check-input " type="radio"
+                        name="flexRadioDefault" id="flexRadioDefault2"
+                        checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        Female
+                    </label>
+                </div>
+                <div
+                    class="form-check border aborder-secondary px-5 py-2 rounded">
+                    <input class="form-check-input" type="radio"
+                        name="flexRadioDefault" id="flexRadioDefault3"
+                        checked>
+                    <label class="form-check-label" for="flexRadioDefault3">
+                        Other
+                    </label>
+                </div>
+            </div>
+
+            <p class="mb-3 text-start">
+                People who use our service may have uploaded your contact
+                information to
+                Facebook. <a href="#">Learn more</a>.
+            </p>
+            <p class="mb-3 text-start">
+                By clicking Sign Up, you agree to our <a href="#"
+                    style="text-decoration-line: none;">Terms</a>, <a href="#"
+                    style="text-decoration-line: none;">Privacy Policy</a>
+                and <a href="#" style="text-decoration-line: none;">Cookies
+                    Policy</a>
+                You may receive SMS notifications from us and can opt out at
+                any time.
+            </p>
+            <button class="btn text-white bg-success px-5 py-1 fs-3 mb-3">Sign
+                up</button>
+            <a href="#" class="text-center "
+                style="text-decoration-line: none;">Already have an account
+                ?</a>
+
+        </div>
+
+    </body>
 </html>
