--- a/Angular/angular controllers/ex-3.html
+++ b/Angular/angular controllers/ex-3.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angular javacript</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="namesControllers.js" defer></script>
   </head>
   <body>
-    <!-- using ng-bind with  span  -->
-    <div ng-app="" ng-init="person={firstName:'John',lastName:'Doe'}">
-      <p>The name is {{ person.lastName }}</p>
+    <div ng-app="myApp" ng-controller="namesCtrl">
+      <ul>
+        <li ng-repeat="x in names">{{x.name+ ', ' + x.country}}</li>
+      </ul>
     </div>
   </body>
 </html>
