--- a/Angular/angular directive/ex-4.html
+++ b/Angular/angular directive/ex-4.html
@@ -7,11 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </head>
   <body>
-    <!-- using ng-bind with  span  -->
-    <div ng-app="" ng-init="points=[1,5,9,8,17,25]">
-      <p>The first result is {{ points[2] }}</p>
-      <p>The second result is <span ng-bind="points[4]"></span></p>
+    <div ng-app="" ng-init="firstname='John';lastname='gupta';">
+      <p>The full name is : {{firstname+" "+lastname}}</p>
+      <p>The name is <span ng-bind="firstname + ' ' + lastname"></span></p>
     </div>
   </body>
 </html>
-
