--- a/Angular/angular scopes/ex-1.html
+++ b/Angular/angular scopes/ex-1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,22 +8,19 @@
   </head>
   <body>
     <div ng-app="myApp" ng-controller="myCtrl">
-      <p ng-bind="firstname"></p>
-      <p ng-bind="lastname"></p>
+      <h1>{{carname}}</h1>
     </div>
 
     <script>
       var app = angular.module("myApp", []);
       app.controller("myCtrl", function ($scope) {
-        $scope.firstname = "John";
-        $scope.lastname = "Doe";
+        $scope.carname = "volvo";
       });
     </script>
 
     <p>
-      Use the ng-bind directive to bind the innerHTML of an element to a
-      property in the data model.
+      The property "carname" was made in the controller, and can be referred to
+      in the view by using the {{ }} brackets.
     </p>
   </body>
 </html>
- 
