--- a/Angular/angular scopes/ex-4.html
+++ b/Angular/angular scopes/ex-4.html
@@ -6,10 +6,31 @@
     <title>Angular javacript</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </head>
-  <body>
-    <div ng-app="" ng-init="firstname='John';lastname='gupta';">
-      <p>The full name is : {{firstname+" "+lastname}}</p>
-      <p>The name is <span ng-bind="firstname + ' ' + lastname"></span></p>
+  <body ng-app="myApp">
+    <p>The rootScope's favorite color:</p>
+    <h1>{{color}}</h1>
+
+    <div ng-controller="myCtrl">
+      <p>The scope of the controller's favorite color:</p>
+      <h1>{{color}}</h1>
     </div>
+
+    <p>The rootScope's favorite color is still:</p>
+    <h1>{{color}}</h1>
+
+    <script>
+      var app = angular.module("myApp", []);
+      app.run(function ($rootScope) {
+        $rootScope.color = "blue";
+      });
+      app.controller("myCtrl", function ($scope) {
+        $scope.color = "red";
+      });
+    </script>
+
+    <p>
+      Notice that controller's color variable does not overwrite the rootScope's
+      color value.
+    </p>
   </body>
 </html>
